fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body{
     overflow-x:hidden;
 }
 a{
-    text-decoration: none;;
+    text-decoration: none;
 }
 
 @keyframes animateDown {
